@@ -47,7 +47,7 @@ static const struct tslib_ops h3600_ops =
 	.read	= h3600_read,
 };
 
-struct tslib_module_info *mod_init(struct tsdev *dev, const char *params)
+TSAPI struct tslib_module_info *mod_init(struct tsdev *dev, const char *params)
 {
 	struct tslib_module_info *m;
 
