@@ -50,7 +50,7 @@ static const struct tslib_ops mk712_ops =
 	.read	= mk712_read,
 };
 
-struct tslib_module_info *mod_init(struct tsdev *dev, const char *params)
+TSAPI struct tslib_module_info *mod_init(struct tsdev *dev, const char *params)
 {
 	struct tslib_module_info *m;
 
