@@ -49,7 +49,7 @@ static const struct tslib_ops ucb1x00_ops =
 	.read	= ucb1x00_read,
 };
 
-struct tslib_module_info *mod_init(struct tsdev *dev, const char *params)
+TSAPI struct tslib_module_info *mod_init(struct tsdev *dev, const char *params)
 {
 	struct tslib_module_info *m;
 
